# Ardan_2023_07_24_Live

./: Cargo.toml
day1/atomic_reference_count/: Cargo.toml
day1/atomic_reference_count/src/: main.rs
day1/borrow_lifetimes/: Cargo.toml
day1/borrow_lifetimes/src/: main.rs
day1/borrowing/src/: main.rs
day1/cloning/: Cargo.toml
day1/cloning/src/: main.rs
day1/copyable/: Cargo.toml
day1/copyable/src/: main.rs
day1/dropping/: Cargo.toml
day1/dropping/src/: main.rs
day1/generic_struct/: Cargo.toml
day1/generic_struct/src/: main.rs
day1/generics/src/: main.rs
day1/lazy/: Cargo.toml
day1/lazy/src/: main.rs
day1/mutable_shared/: Cargo.toml
day1/mutable_shared/src/: main.rs
day1/mutable_shared_atomic/: Cargo.toml
day1/mutable_shared_atomic/src/: main.rs
day1/mutable_sharing_mutex/: Cargo.toml
day1/mutable_sharing_mutex/src/: main.rs
day1/mutable_sharing_rwlock/: Cargo.toml
day1/mutable_sharing_rwlock/src/: main.rs
day1/new_types/: Cargo.toml
day1/new_types/src/: main.rs
day1/ownership_move/: Cargo.toml
day1/ownership_move/src/: main.rs
day1/reference_count/: Cargo.toml
day1/reference_count/src/: main.rs
day1/simple_trait/: Cargo.toml
day1/simple_trait/src/: main.rs
day1/traits_demo/: Cargo.toml
day1/traits_demo/src/: main.rs
day2/axum_file_adapter/: Cargo.toml
day2/axum_file_adapter/src/: main.rs
day2/axum_file_stream/: Cargo.toml
day2/axum_file_stream/src/: main.rs
day2/external_process/: Cargo.toml
day2/external_process/src/: main.rs
day2/external_process_async/: Cargo.toml
day2/external_process_async/src/: main.rs
day2/hello_async_futures/src/: main.rs
day2/hello_threads/src/: main.rs
day2/hello_tokio/src/: main.rs
day2/line_count/src/: main.rs
day2/line_count_memmap/: Cargo.toml
day2/line_count_memmap/src/: main.rs
day2/scoped_threads/src/: main.rs
day2/thread_channels/src/: main.rs
day2/thumbnailer/: Cargo.toml
day2/thumbnailer/src/: main.rs
day2/tokio_blocking/src/: main.rs
day2/tokio_channels/src/: main.rs
day2/tokio_with_threads/: Cargo.toml
day2/tokio_with_threads/src/: main.rs
day2/web_service/: Cargo.toml
day2/web_service/src/: hello.html  main.rs
day3/axum_tracing/: Cargo.toml
day3/axum_tracing/src/: main.rs
day3/bench_criterion/: Cargo.toml
day3/databases/: .env  Cargo.toml  hello_db.db-shm  hello_db.db-wal
day3/databases/migrations/: 20230726154356_more_messages.sql
day3/databases/src/: main.rs
day3/databases_axum/: Cargo.toml
day3/databases_axum/src/: main.rs
day3/errors_async/: Cargo.toml
day3/errors_async/src/: main.rs
day3/external_process2/: Cargo.toml
day3/external_process2/src/: main.rs
day3/external_process_wait_or_kill/: Cargo.toml
day3/external_process_wait_or_kill/src/: main.rs
day3/pass_through_anyhow/: Cargo.toml
day3/pass_through_anyhow/src/: main.rs
day3/pass_through_errors/: Cargo.toml
day3/pass_through_errors/src/: main.rs
day3/pass_through_thiserror/: Cargo.toml
day3/pass_through_thiserror/src/: main.rs
day3/simple_benchmark/: Cargo.toml
day3/simple_benchmark/src/: main.rs
day3/strong_errors/: Cargo.toml
day3/strong_errors/src/: main.rs
day3/tokio_tracing/: Cargo.toml
day3/tokio_tracing/src/: main.rs
day3/unit_tests/: Cargo.toml
day3/unit_tests/src/: lib.rs
day4/doctesting/: Cargo.toml
day4/doctesting/src/: lib.rs
day4/mocktesting/: Cargo.toml
day4/mocktesting/src/: lib.rs
day4/property_testing/: Cargo.toml
day4/property_testing/src/: lib.rs
day4/stubbing/: Cargo.toml
day4/stubbing/src/: lib.rs  stubbing.rs
