[package]
name = "ardan_2023_07_24_live"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    # Day 1 - Ownership, Borrowing, Lifetimes, Arcs, Shared Data, Traits
    "day1/hello_world",
    "day1/ownership_move",
    "day1/dropping",
    "day1/cloning",
    "day1/borrowing",
    "day1/borrow_lifetimes",
    "day1/copyable",
    "day1/reference_count",
    "day1/atomic_reference_count",
    "day1/mutable_shared",
    "day1/mutable_shared_atomic",
    "day1/mutable_sharing_mutex",
    "day1/mutable_sharing_rwlock",
    "day1/lazy",
    "day1/traits_demo",
    "day1/simple_trait",
    "day1/generics",
    "day1/new_types",
    "day1/generic_struct",

    # Day 2: Threads & Async
    "day2/hello_threads",
]