[package]
name = "ardan_2023_07_24_live"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    # Day 1 - Ownership, Borrowing, Lifetimes, Arcs, Shared Data, Traits
    "day1/hello_world",
    "day1/ownership_move",
    "day1/dropping",
    "day1/cloning",
    "day1/borrowing",
    "day1/borrow_lifetimes",
    "day1/copyable",
    "day1/reference_count",
    "day1/atomic_reference_count",
    "day1/mutable_shared",
    "day1/mutable_shared_atomic",
    "day1/mutable_sharing_mutex",
    "day1/mutable_sharing_rwlock",
    "day1/lazy",
    "day1/traits_demo",
    "day1/simple_trait",
    "day1/generics",
    "day1/new_types",
    "day1/generic_struct",

    # Day 2: Threads & Async
    "day2/hello_threads",
    "day2/divide_workload",
    "day2/scoped_threads",
    "day2/thread_channels",
    "day2/hello_async_futures",
    "day2/hello_tokio",
    "day2/tokio_blocking",
    "day2/tokio_channels",
    "day2/tokio_with_threads",
    "day2/web_service",
    "day2/line_count",
    "day2/line_count_memmap",
    "day2/axum_file_stream",
    "day2/axum_file_adapter",
    "day2/thumbnailer", # Example program to run
    "day2/external_process",
    "day2/external_process_async",

    # Day 3: More external programs, databases, dependency injection,
    # error handling, tracing and benchmarking
    "day3/external_process2",
    "day3/external_process_wait_or_kill",
    "day3/databases",
    "day3/databases_axum",
    "day3/strong_errors",
    "day3/pass_through_errors",
    "day3/pass_through_anyhow",
    "day3/pass_through_thiserror",
    "day3/errors_async",
    "day3/unit_tests",
    "day3/tokio_tracing",
    "day3/axum_tracing",
    "day3/simple_benchmark",
    "day3/bench_criterion",

    # Day 4: QA, Best Practices, Finishing Unit Testing
    "day4/doctesting",
    "day4/stubbing",
    "day4/mocktesting",
    "day4/property_testing",
]
