[package]
name = "databases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
dotenv = "0.15.0"
futures = "0.3.28"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.29.1", features = ["full"] }
